<resources>
    <string name="app_name">InternetShop</string>
    <string name="Buy">Buy</string>
    <string name="promotional_products">Promotional products</string>
    <string name="products_in_stock">Products in stock</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="deviceImage">Device image</string>
    <string name="deviceDescriptionTitle">Description</string>
    <string name="numberOfPurchases">Number of purchases: </string>
    <string name="openBasket">Open basket</string>
    <string name="register">Registration</string>
    <string name="name">Name</string>
    <string name="lastName">Last name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="Basket">Basket</string>
    <string name="ConfirmPurchase">Confirm purchase</string>
    <string name="Remove">Remove</string>
    <string name="Ordering">Ordering</string>
    <string name="signUp">Sign up</string>
    <string name="order">Order</string>
    <string name="cardNumber">Card number</string>
    <string name="cardMonth">MM</string>
    <string name="cardYear">YY</string>
    <string name="cardMMYYSeparator">/</string>
    <string name="cardCV">CV</string>
    <string name="orderPrice">Order price:</string>
</resources>
