<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include
        layout="@layout/simple_text_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:paddingLeft="18dp"
        android:paddingRight="18dp">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="@string/Ordering"
                android:textColor="#ffffff"
                android:textSize="42sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/orderPrice"
                    android:textSize="18sp"
                    />

                <TextView
                    android:id="@+id/order_TotalPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    />

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:textColorHint="@color/colorAccent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/order_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="17dp"
                    android:hint="@string/name"
                    android:textColorHint="@color/colorAccent"
                    android:inputType="textPersonName"
                    android:textColor="@android:color/white" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:textColorHint="@color/colorAccent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/order_lastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="17dp"
                    android:hint="@string/lastName"
                    android:textColorHint="@color/colorAccent"
                    android:inputType="textPersonName"
                    android:textColor="@android:color/white" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:textColorHint="@color/colorAccent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/order_cardNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="17dp"
                    android:hint="@string/cardNumber"
                    android:inputType="numberSigned"
                    android:textColor="@android:color/white"
                    android:maxLength="16" />
            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="45dp"
                    android:textColorHint="@color/colorAccent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/order_cardMonth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="17dp"
                        android:hint="@string/cardMonth"
                        android:inputType="numberSigned"
                        android:textColor="@android:color/white"
                        android:maxLength="2"/>
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:text="@string/cardMMYYSeparator"
                    android:layout_marginHorizontal="3dp"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="45dp"
                    android:textColorHint="@color/colorAccent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/order_cardYear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="17dp"
                        android:hint="@string/cardYear"
                        android:inputType="numberSigned"
                        android:textColor="@android:color/white"
                        android:maxLength="2"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="45dp"
                    android:textColorHint="@color/colorAccent"
                    android:layout_marginLeft="30dp"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/order_cardCV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="17dp"
                        android:hint="@string/cardCV"
                        android:inputType="numberPassword"
                        android:textColor="@android:color/white"
                        android:maxLength="3"/>
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <FrameLayout
                android:id="@+id/btn_Order"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="@drawable/background_signup"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                android:onClick="btnOrderClick">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/order"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp" />
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
