<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.DeviceCardActivity">

    <include
        layout="@layout/navigation_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </include>

    <android.support.v7.widget.CardView
        android:id="@+id/cardViewDeviceHeader"
        android:layout_width="match_parent"
        android:layout_height="300dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:id="@+id/imgDeviceCardInfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/deviceImage"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/tvDeviceCardName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                android:text="Iphone"
                android:layout_below="@id/imgDeviceCardInfo"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="14sp"
                    android:text="@string/numberOfPurchases"/>

                <TextView
                    android:id="@+id/tvDeviceCardNumberOfPurchases"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="14sp"/>

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/tvDeviceCardDescriptionTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:text="@string/deviceDescriptionTitle"
        android:layout_marginHorizontal="5dp"
        android:layout_below="@id/cardViewDeviceHeader"/>

    <TextView
        android:id="@+id/tvDeviceCardDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:text="@string/deviceDescriptionTitle"
        android:layout_marginHorizontal="5dp"
        android:layout_below="@id/tvDeviceCardDescriptionTitle"/>
    
    <LinearLayout
        android:layout_height="40dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">
        
        <TextView
            android:id="@+id/tvDeviceCardPrice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/btnDeviceCardBuy"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/Buy"
            android:textSize="18sp"
            android:textColor="@color/white"/>
        
    </LinearLayout>

</RelativeLayout>